--- a/public/index.html
+++ b/public/index.html
@@ -57,12 +57,13 @@
   </header>
     <main>
               <!-- Intro -->
-    <section>
-      <div class="my-20 mx-20 max-w-lg lg:text-lg md:text-base sm:text-sm">
-        <h2 class="font-bold text-3xl leading-normal max-w-5xl md:text-4xl">Rudy<br>Paningal</h2>
-        <p class="py-2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae, earum cum ea neque sed consequuntur! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam tempora exercitationem voluptate deleniti totam quo!</p>
-      </div>
-    </section>
+              <section>
+                <div class="my-20 mx-20 max-w-lg lg:text-lg md:text-base sm:text-sm relative ">
+                  <h2 class="font-bold text-3xl leading-normal max-w-5xl md:text-4xl">Rudy<br>Paningal</h2>
+                  <p class="py-2 pb-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae, earum cum ea neque sed consequuntur! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam tempora exercitationem voluptate deleniti totam quo!</p>
+          <img src="./img/rudeh2.JPG" alt="" class="w-full  sm:w-1/3 xl:w-1/2 xl:absolute bottom-0 left-full ">
+                </div>
+              </section>
     
             <section>
                 
