--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
         <dl class="grid grid-cols-1 gap-4 sm:grid-cols-3">
           <div class="flex flex-col rounded-lg bg-white px-4 py-8 text-center shadow-2xl">
             <img src="./img/kaltik.png" alt="" class="rounded-lg"> 
-            <dt class="order-last text-sm font-medium text-gray-500 text-left mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus veniam ea deserunt blanditiis eum rem!
+            <dt class="order-last text-sm font-medium text-gray-500 text-left mt-2">Sebuah website kalkulator matematika yang sangat berguna untuk membantu pengguna dalam perhitungan luas dan panjang persegi dengan mudah dan cepat.
             <br>
             <a href="https://ruddypp.github.io/KalkulatorPersegi/">
               <button data-ripple-light="true" type="button" class="select-none rounded-lg bg-black py-3 px-6 text-center align-middle font-sans text-xs font-bold uppercase text-white shadow-md shadow-black transition-all hover:shadow-lg hover:shadow-white focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none mt-5">
@@ -131,7 +131,7 @@
           
           <div class="flex flex-col rounded-lg bg-white px-4 py-8 text-center shadow-2xl">
             <img src="./img/todolist.png" alt="" class="rounded-lg"> 
-            <dt class="order-last text-sm font-medium text-gray-500 text-left mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus veniam ea deserunt blanditiis eum rem!
+            <dt class="order-last text-sm font-medium text-gray-500 text-left mt-2">Sebuah website sederhana dan praktis yang dirancang untuk mencatat kegiatan sehari-hari dengan menggunakan bahasa pemrograman JavaScript agar lebih efisien dan teratur.
             <br>
             <a href="https://ruddypp.github.io/TodoList/">
               <button data-ripple-light="true" type="button" class="select-none rounded-lg bg-black py-3 px-6 text-center align-middle font-sans text-xs font-bold uppercase text-white shadow-md shadow-black transition-all hover:shadow-lg hover:shadow-white focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none mt-5">
@@ -144,7 +144,7 @@
 
           <div class="flex flex-col rounded-lg bg-white px-4 py-8 text-center shadow-2xl">
             <img src="./img/8express.png" alt="" class="rounded-lg"> 
-            <dt class="order-last text-sm font-medium text-gray-500 text-left mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus veniam ea deserunt blanditiis eum rem!
+            <dt class="order-last text-sm font-medium text-gray-500 text-left mt-2">Sebuah website ekspedisi yang dikembangkan sebagai proyek utama untuk Informatics Study Club, melibatkan anggota sebanyak lima orang dalam pengerjaan dan pengembangannya.
             <br>
             <a href="https://ruddypp.github.io/tes/">
               <button data-ripple-light="true" type="button" class="select-none rounded-lg bg-black py-3 px-6 text-center align-middle font-sans text-xs font-bold uppercase text-white shadow-md shadow-black transition-all hover:shadow-lg hover:shadow-white focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none mt-5">
@@ -163,16 +163,20 @@
 
 
 <section >
-  <div class="mx-auto max-w-screen-xl px-4 py-16 sm:px-6 lg:px-8">
+  <div class="mx-auto max-w-screen-xl px-4 py-16 sm:px-6 lg:px-8" data-aos="fade-right"
+  data-aos-offset="300"
+  data-aos-easing="ease-in-sine">
     <div class="grid grid-cols-1 gap-x-16 gap-y-8 lg:grid-cols-5">
       <div class="lg:col-span-2 lg:py-12">
-        <h1 class="text-3xl font-semibold" id="contact">Contact Information</h1>
+        <h1 class="text-3xl font-semibold">Contact Information</h1>
         <p class="max-w-xl text-base">
           Fill up the form and our Team will get back to you within 24 hours
         </p>
       </div>
 
-      <div class="rounded-lg bg-white p-8 shadow-lg lg:col-span-3 lg:p-12 border-solid border-2 border-black">
+      <div class="rounded-lg bg-white p-8 shadow-lg lg:col-span-3 lg:p-12 border-solid border-2 border-black" data-aos="fade-left"
+      data-aos-offset="300"
+      data-aos-easing="ease-in-sine" id="contact">
         <form action="#" class="space-y-4">
           <div>
             <label class="sr-only" for="name">Name</label>
@@ -286,7 +290,7 @@
     </div>
 
     <p class="mt-12 text-center text-sm text-gray-500 lg:text-center">
-      Copyright &copy; 2024. Made with Love.
+      Rudy &copy; 2024. Made with Love ♥
     </p>
   </div>
 </footer>
