--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
 
             <div class="place-self-center" data-aos="fade-up"
             data-aos-duration="1500">
-              <img src="./img/npm2.png" alt="" width="100px "">
+              <img src="./img/node-js.png" alt="" width="100px "">
             </div>
       </div>
     </div>
