--- a/public/index.html
+++ b/public/index.html
@@ -189,16 +189,16 @@
           </div>
 
           <div class="flex flex-col rounded-lg bg-white px-4 py-8 text-center shadow-2xl">
-            <img src="./img/8express.png" alt="" class="rounded-lg"> 
-            <dt class="order-last text-sm font-medium text-gray-500 text-left mt-2">Serfikat saya selama mengikuti pembelajaran
+            <img src="./img/dashboard.png" alt="" class="rounded-lg"> 
+            <dt class="order-last text-sm font-medium text-gray-500 text-left mt-2">Dashboard admin statis dibuat dengan tailwind
             <br>
-            <a href="https://ruddypp.github.io/tes/">
+            <a href="https://dashboard-static-rudy.vercel.app/">
               <button data-ripple-light="true" type="button" class="select-none rounded-lg bg-black py-3 px-6 text-center align-middle font-sans text-xs font-bold uppercase text-white shadow-md shadow-black transition-all hover:shadow-lg hover:shadow-white focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none mt-5">
                 Demo
               </button>
             </a>
             </dt>
-            <dd class="text-2xl font-extrabold text-black md:text-3xl text-left mt-3">Certificate</dd>
+            <dd class="text-2xl font-extrabold text-black md:text-3xl text-left mt-3">Dashboard</dd>
           </div>
           
         </dl>
@@ -207,7 +207,66 @@
   </section>
 
 
-<section >
+<!-- SERTIFICATE -->
+<section class="bg-white">
+  <div class="mx-auto max-w-screen-xl px-4 py-12 sm:px-6 md:py-16 lg:px-8">
+    <div class="mx-auto max-w-3xl text-center" data-aos="fade-up" data-aos-anchor-placement="center-center" data-aos-duration="1500">
+      <h2 class="text-3xl font-bold text-gray-900 sm:text-4xl">Sertificate</h2>
+      <p class="mt-4 text-gray-500 sm:text-xl">I have a few certificates</p>
+    </div>
+
+    <div class="mt-8 sm:mt-12" data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="800">
+      <div class="container px-6 py-10 mx-auto">
+        <div class="grid grid-cols-1 gap-8 mt-8 xl:mt-12 xl:gap-12 lg:grid-cols-2">
+
+          <!-- Card 1 (HTML Certificate) -->
+          <div class="flex items-end overflow-hidden bg-cover rounded-lg h-96" style="background-image:url('./img/html.jpg')">
+            <div class="w-full px-8 py-4 overflow-hidden rounded-b-lg backdrop-blur-sm bg-white/60 dark:bg-gray-800/60">
+              <h2 class="mt-4 text-xl font-semibold text-gray-800 capitalize dark:text-white">Certificate HTML</h2>
+              <a href="https://www.sololearn.com/certificates/CC-8KNJXDYH">
+                <button data-ripple-light="true" type="button" class="select-none rounded-lg bg-black py-3 px-6 mt-5 text-xs font-bold uppercase text-white shadow-md hover:shadow-lg focus:opacity-[0.85]">View</button>
+              </a>
+            </div>
+          </div>
+
+          <!-- Card 2 (CSS Certificate) -->
+          <div class="flex items-end overflow-hidden bg-cover rounded-lg h-96" style="background-image:url('./img/css.jpg')">
+            <div class="w-full px-8 py-4 overflow-hidden rounded-b-lg backdrop-blur-sm bg-white/60 dark:bg-gray-800/60">
+              <h2 class="mt-4 text-xl font-semibold text-gray-800 capitalize dark:text-white">Certificate CSS</h2>
+              <a href="https://www.sololearn.com/certificates/CC-JVGAZS95">
+                <button data-ripple-light="true" type="button" class="select-none rounded-lg bg-black py-3 px-6 mt-5 text-xs font-bold uppercase text-white shadow-md hover:shadow-lg focus:opacity-[0.85]">View</button>
+              </a>
+            </div>
+          </div>
+
+          <!-- Card 3 (JavaScript Certificate) -->
+          <div class="flex items-end overflow-hidden bg-cover rounded-lg h-96" style="background-image:url('./img/js.jpg')">
+            <div class="w-full px-8 py-4 overflow-hidden rounded-b-lg backdrop-blur-sm bg-white/60 dark:bg-gray-800/60">
+              <h2 class="mt-4 text-xl font-semibold text-gray-800 capitalize dark:text-white">Certificate JavaScript</h2>
+              <a href="https://www.sololearn.com/certificates/CC-ETOQISUR">
+                <button data-ripple-light="true" type="button" class="select-none rounded-lg bg-black py-3 px-6 mt-5 text-xs font-bold uppercase text-white shadow-md hover:shadow-lg focus:opacity-[0.85]">View</button>
+              </a>
+            </div>
+          </div>
+
+          <!-- Card 4 (React Certificate) -->
+          <div class="flex items-end overflow-hidden bg-cover rounded-lg h-96" style="background-image:url('https://images.unsplash.com/photo-1557800636-894a64c1696f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80')">
+            <div class="w-full px-8 py-4 overflow-hidden rounded-b-lg backdrop-blur-sm bg-white/60 dark:bg-gray-800/60">
+              <h2 class="mt-4 text-xl font-semibold text-gray-800 capitalize dark:text-white">Certificate JavaScript Intermidiate</h2>
+              <a href="#">
+                <button data-ripple-light="true" type="button" class="select-none rounded-lg bg-black py-3 px-6 mt-5 text-xs font-bold uppercase text-white shadow-md hover:shadow-lg focus:opacity-[0.85]">View</button>
+              </a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<section>
   <div class="mx-auto max-w-screen-xl px-4 py-16 sm:px-6 lg:px-8" data-aos="fade-right"
   data-aos-offset="300"
   data-aos-easing="ease-in-sine">
