--- a/public/index.html
+++ b/public/index.html
@@ -249,11 +249,11 @@
             </div>
           </div>
 
-          <!-- Card 4 (React Certificate) -->
-          <div class="flex items-end overflow-hidden bg-cover rounded-lg h-96" style="background-image:url('https://images.unsplash.com/photo-1557800636-894a64c1696f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80')">
+          <!-- Card 4 (JS-Intermidiate) -->
+          <div class="flex items-end overflow-hidden bg-cover rounded-lg h-96" style="background-image:url('./img/js-intermidiate.jpg')">
             <div class="w-full px-8 py-4 overflow-hidden rounded-b-lg backdrop-blur-sm bg-white/60 dark:bg-gray-800/60">
               <h2 class="mt-4 text-xl font-semibold text-gray-800 capitalize dark:text-white">Certificate JavaScript Intermidiate</h2>
-              <a href="#">
+              <a href="https://www.sololearn.com/certificates/CC-SAH6HYP5">
                 <button data-ripple-light="true" type="button" class="select-none rounded-lg bg-black py-3 px-6 mt-5 text-xs font-bold uppercase text-white shadow-md hover:shadow-lg focus:opacity-[0.85]">View</button>
               </a>
             </div>
