--- a/public/index.html
+++ b/public/index.html
@@ -208,7 +208,7 @@
 
 
 <!-- SERTIFICATE -->
-<section class="bg-white">
+<section class="bg-white" id="certificate">
   <div class="mx-auto max-w-screen-xl px-4 py-12 sm:px-6 md:py-16 lg:px-8">
     <div class="mx-auto max-w-3xl text-center" data-aos="fade-up" data-aos-anchor-placement="center-center" data-aos-duration="1500">
       <h2 class="text-3xl font-bold text-gray-900 sm:text-4xl">Sertificate</h2>
@@ -378,6 +378,10 @@
 
         <li>
           <a class="text-gray-700 transition hover:text-gray-700/75" href="#project"> Projects </a>
+        </li>
+
+        <li>
+          <a class="text-gray-700 transition hover:text-gray-700/75" href="#cetificate"> Certificate </a>
         </li>
 
         <li>
