--- a/public/index.html
+++ b/public/index.html
@@ -221,7 +221,22 @@
               </button>
             </a>
           </div>
-          <h3 class="text-2xl font-extrabold text-black md:text-3xl text-left mt-3">Snake </h3>
+          <h3 class="text-2xl font-extrabold text-black md:text-3xl text-left mt-3">Snake</h3>
+        </div>
+
+        <div class="flex flex-col rounded-lg bg-white px-4 py-8 text-center shadow-2xl">
+          <img src="./img/chart.png" alt="" class="rounded-lg h-64 object-cover">
+          <p class="order-last text-sm font-medium text-gray-500 text-left mt-2 line-clamp-3">
+            Tabel Penjualan untuk tugas Pemrograman web 
+          </p>
+          <div class="mt-5">
+            <a href="https://chart-js-tawny.vercel.app/">
+              <button data-ripple-light="true" type="button" class="select-none rounded-lg bg-black py-3 px-6 text-center align-middle font-sans text-xs font-bold uppercase text-white shadow-md shadow-black transition-all hover:shadow-lg hover:shadow-white focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none">
+                Demo
+              </button>
+            </a>
+          </div>
+          <h3 class="text-2xl font-extrabold text-black md:text-3xl text-left mt-3">Tabel Penjualan</h3>
         </div>
 
       </div>
