--- a/public/index.html
+++ b/public/index.html
@@ -458,84 +458,86 @@
 </section>
 
 
-<section class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8">
-  <div class="mb-8">
-      <h1 class="text-3xl font-semibold mb-4">Lokasi Monas</h1>
-      <div class="w-full h-[400px] rounded-lg overflow-hidden shadow-lg">
-          <iframe 
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.666466960686!2d106.82493841476885!3d-6.175392395527989!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f5d2e764b12d%3A0x3d2ad6e1e0e9bcc8!2sMonumen%20Nasional!5e0!3m2!1sen!2sid!4v1630825600000!5m2!1sen!2sid"
-              width="100%" 
-              height="100%" 
-              style="border:0;" 
-              allowfullscreen="" 
-              loading="lazy">
-          </iframe>
-      </div>
-  </div>
 
   <!-- Contact Form Section -->
-  <section>
-      <div class="mx-auto max-w-screen-xl px-4 py-16 sm:px-6 lg:px-8" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
-          <div class="grid grid-cols-1 gap-x-16 gap-y-8 lg:grid-cols-5">
-              <div class="lg:col-span-2 lg:py-12">
-                  <h1 class="text-3xl font-semibold">Contact Information</h1>
-                  <p class="max-w-xl text-base">
-                      Fill up the form and our Team will get back to you within 24 hours
-                  </p>
-              </div>
+  <section class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 lg:px-8">
+    <div class="mb-8">
+        <h1 class="text-3xl font-semibold mb-4">Lokasi Monas</h1>
+        <div class="w-full h-[250px] rounded-lg overflow-hidden shadow-lg">
+            <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.666466960686!2d106.82493841476885!3d-6.175392395527989!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f5d2e764b12d%3A0x3d2ad6e1e0e9bcc8!2sMonumen%20Nasional!5e0!3m2!1sen!2sid!4v1630825600000!5m2!1sen!2sid"
+                width="100%" 
+                height="100%" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy">
+            </iframe>
+        </div>
+    </div>
 
-              <div class="rounded-lg bg-white p-8 shadow-lg lg:col-span-3 lg:p-12 border-solid border-2 border-black" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" id="contact">
-                  <form action="https://api.web3forms.com/submit" method="POST" class="space-y-4">
-                      <input type="hidden" name="access_key" value="105a6ade-74c5-4f88-af60-39b51a693a9d">
+    <!-- Contact Form Section -->
+    <section>
+        <div class="mx-auto max-w-screen-xl px-4 py-16 sm:px-6 lg:px-8">
+            <div class="grid grid-cols-1 gap-x-16 gap-y-8 lg:grid-cols-5">
+                <div class="lg:col-span-2 lg:py-12">
+                    <h1 class="text-3xl font-semibold">Contact Information</h1>
+                    <p class="max-w-xl text-base">
+                        Fill up the form and our Team will get back to you within 24 hours
+                    </p>
+                </div>
 
-                      <div>
-                          <label class="sr-only" for="name">Name</label>
-                          <input
-                              class="w-full rounded-lg border-gray-200 p-3 text-sm"
-                              placeholder="Name"
-                              type="text"
-                              name="name"
-                              required
-                          />
-                      </div>
+                <div class="rounded-lg bg-white p-8 shadow-lg lg:col-span-3 lg:p-12 border-solid border-2 border-black" id="contact">
+                    <form action="https://api.web3forms.com/submit" method="POST" class="space-y-4">
+                        <input type="hidden" name="access_key" value="105a6ade-74c5-4f88-af60-39b51a693a9d">
 
-                      <div class="grid grid-cols-1 gap-4 sm:grid-cols-2">
-                          <div>
-                              <label class="sr-only" for="email">Email</label>
-                              <input
-                                  class="w-full rounded-lg border-gray-200 p-3 text-sm"
-                                  placeholder="Email address"
-                                  type="email"
-                                  name="email"
-                                  required
-                              />
-                          </div>
-                      </div>
+                        <div>
+                            <label class="sr-only" for="name">Name</label>
+                            <input
+                                class="w-full rounded-lg border-gray-200 p-3 text-sm"
+                                placeholder="Name"
+                                type="text"
+                                name="name"
+                                required
+                            />
+                        </div>
 
-                      <div>
-                          <label class="sr-only" for="message">Message</label>
-                          <textarea
-                              class="w-full rounded-lg border-gray-200 p-3 text-sm"
-                              placeholder="Message"
-                              rows="8"
-                              name="message"
-                              required
-                          ></textarea>
-                      </div>
+                        <div class="grid grid-cols-1 gap-4 sm:grid-cols-2">
+                            <div>
+                                <label class="sr-only" for="email">Email</label>
+                                <input
+                                    class="w-full rounded-lg border-gray-200 p-3 text-sm"
+                                    placeholder="Email address"
+                                    type="email"
+                                    name="email"
+                                    required
+                                />
+                            </div>
+                        </div>
 
-                      <div class="mt-4">
-                          <button
-                              type="submit"
-                              class="inline-block w-full rounded-lg bg-black px-5 py-3 font-medium text-white sm:w-auto"
-                          >
-                              Send Message
-                          </button>
-                      </div>
-                  </form>
-              </div>
-          </div>
-      </div>
-  </section>
+                        <div>
+                            <label class="sr-only" for="message">Message</label>
+                            <textarea
+                                class="w-full rounded-lg border-gray-200 p-3 text-sm"
+                                placeholder="Message"
+                                rows="8"
+                                name="message"
+                                required
+                            ></textarea>
+                        </div>
+
+                        <div class="mt-4">
+                            <button
+                                type="submit"
+                                class="inline-block w-full rounded-lg bg-black px-5 py-3 font-medium text-white sm:w-auto"
+                            >
+                                Send Message
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 </section>
 
 </main>
